# AndroidJniDemo

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_log.h  file.c  file.h  prime.c  stringTest.c  student.c
app/src/main/cpp/log/: log.c  log.h
app/src/main/cpp/storeutils/: ArrayList.c  ArrayList.h  ArrayQueue.c  ArrayQueue.h  ArrayStack.c  ArrayStack.h  LinkedList.c  LinkedList.h  LinkedQueue.c  LinkedQueue.h  LinkedStack.c  LinkedStack.h  SimpleArrayTree.c  SimpleArrayTree.h
app/src/main/cpp/test/: storeDifferentPointerTypes.c  testArrayList.c  testArrayQueue.c  testArrayStack.c  testFunctionPointer.c  testLinkedList.c  testLinkedQueue.c  testLinkedStack.c  testSimpleArrayTree.c
app/src/main/java/: VampireNumbers.java
app/src/main/java/com/jni/test/activity/: MainActivity.java  PrimeActivity.java  StudentActivity.java
app/src/main/java/com/jni/test/adapter/: TextWatcherAdapter.java
app/src/main/java/com/jni/test/base/: BaseActivity.java
app/src/main/res/layout/: activity_main.xml  activity_prime.xml  activity_student.xml
cprograms/: build.gradle
cprograms/src/androidTest/java/com/jni/cprograms/: ExampleInstrumentedTest.java
cprograms/src/main/: AndroidManifest.xml
cprograms/src/main/cpp/: ArrayAndLocalVariable.cpp  CMakeLists.txt  CppHelloWorld.cpp  Hello.cpp  caculateScore.cpp  charCount.c  com_interact_nati_CallNativeFunction.h  concatStringByPointer.cpp  functionDeclaration.cpp  indexOutOfBound.cpp  invokeExternalFunction.cpp  memory_align.c  myMathLib.cpp  myMathLib.h  product.cpp  product2.cpp  removeRandomRepeatedCharacters.cpp  removeRepeatedCharacters.cpp  sizeOfBaseDataType.cpp  smallestGeneratedTree.c  strCompare.cpp  stringIO.cpp  structAndLocalVariable.cpp  studentsAverageScore.cpp
cprograms/src/main/cpp/file/: fputcRetrieveTest.c  freadTest.c  printTextFile.c  writeBinaryAndTextData.c
cprograms/src/main/cpp/test/: myfile.format
cprograms/src/main/res/values/: strings.xml
cprograms/src/test/java/com/jni/cprograms/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
